feature: 관리자가 결과물 관리하기 위한 API 로직 완성